--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="font-size: 50px;">Random Quote Generator</h1>
+        <h1 style="font-size: 50px;">Quote Generator</h1>
         <div class="quote-container" id="quoteContainer">
             <p class="quote-text">'This above all: to thine own self be true.' </p>
             <p class="author">William Shakespeare</p>
